[gd_scene load_steps=3 format=3 uid="uid://scqegb5pvl8d"]

[ext_resource type="Script" uid="uid://dc6ibiqg03lac" path="res://game/scenes/elements/image_preview.gd" id="1_eyi8r"]

[sub_resource type="LabelSettings" id="LabelSettings_eyi8r"]
font_size = 10

[node name="image_preview" type="PanelContainer" node_paths=PackedStringArray("label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_eyi8r")
label = NodePath("v_box_container/path_label")

[node name="v_box_container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="texture_rect" type="TextureRect" parent="v_box_container/margin_container"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="path_label" type="Label" parent="v_box_container"]
layout_mode = 2
label_settings = SubResource("LabelSettings_eyi8r")
horizontal_alignment = 1
text_overrun_behavior = 4
